--- a/hu_aix_71.adoc
+++ b/hu_aix_71.adoc
@@ -70,4 +70,4 @@ The AIX 7.1 with ONTAP storage release has no known issues.
 
 == What's next?
 
-link:hu_aix_61_cmd.html[Learn abaout the AIX Host Utilties 6.1 sample command reference].
+link:hu_aix_61_cmd.html[Learn about the AIX Host Utilties 6.1 tool].
