--- a/hu_aix_72.adoc
+++ b/hu_aix_72.adoc
@@ -4,7 +4,7 @@ permalink: hu_aix_72.html
 keywords: Host Utilities, aix, powervm, vios, 3.1, 7.2 netapp, ontap
 summary: Describes how to use IBM AIX 7.2 and/or PowerVM VIOS 3.1 with with ONTAP
 ---
-= configure AIX 7.2/VIOS 3.1 for FCP and iSCSI with ONTAP storage
+= Configure AIX 7.2/VIOS 3.1 for FCP and iSCSI with ONTAP storage
 :hardbreaks:
 :toclevels: 1
 :nofooter:
@@ -87,7 +87,7 @@ The IBM AIX 7.2 and/or PowerVM (VIOS 3.1) with ONTAP storage release has the fol
 
 == What's next?
 
-link:hu_aix_61_cmd.html[Learn abaout the AIX Host Utilties 6.1 sample command reference].
+link:hu_aix_61_cmd.html[Learn about the AIX Host Utilities 6.1 tool].
 
 //GitHub issue #114
 // BURT 1483343, 2022-16-06
