--- a/nvme_aix.adoc
+++ b/nvme_aix.adoc
@@ -41,27 +41,50 @@ You can use the following support and features with the NVMe-oF host configurati
 
 * If you have a MetroCluster configuration, NetApp recommends changing the AIX NVMe/FC default APD (All Path Down) time for supporting MetroCluster unplanned switchover events to avoid the AIX operating system enforcing a shorter I/O timeout. For additional information and the recommended changes to default settings, refer to NetApp Bugs Online - link:https://mysupport.netapp.com/site/bugs-online/product/HOSTUTILITIES/1553249[1553249^].
 
-* By default, the Asymmetric Namespace Access Transition Timeout (ANATT) value for the AIX host OS is 30 seconds. IBM provides an Interim Fix (ifix) which caps the ANATT value at 60 seconds; you need to install an ifix from the IBM website to ensure that all ONTAP workflows are non-disruptive. 
+* Depending on your AIX version, the Asymmetric Namespace Access Transition Timeout (ANATT) value for the AIX host OS is 30 seconds or 60 seconds by default. If the ANATT default value for your host is 30 seconds, you need to install an ifix from the IBM website that sets the ANATT to 60 seconds to ensure that all ONTAP workflows are non-disruptive. 
 +
-
 [NOTE]
-For NVMe/FC AIX support, you must install an ifix on the GA versions of AIX OS. This is not required for the VIOS/PowerVM OS.
-
+====
+For NVMe/FC AIX support, you must install an ifix on the GA version of the AIX OS. The ifix isn't required for the VIOS/PowerVM OS.
+ 
+You need to install the ifixes on an AIX version with no previously installed ifixes related to `devices.pciex.pciexclass.010802.rte` on the system. Previously installed ifixes will conflict with the new installation.
+====
 +
+[role="tabbed-block"]
+====
+.Set 60 second ANATT
+--
+IBM provides an ifix that sets the ANATT value to 60 seconds. You need to install this ifix for the following AIX releases:
 
-The ifix details are as follows:
-+
+* For AIX level 72-TL5-SP6-2320, install the IJ46710s6a.230509.epkg.Z package.
+* For AIX level 73-TL1-SP2-2320, install the IJ46711s2a.230509.epkg.Z package.
+--
+.Default 60 second ANATT 
+--
+The default ANATT value is 60 seconds for the following AIX releases:
 
-** For AIX level 72-TL5-SP6-2320, install the `IJ46710s6a.230509.epkg.Z` package.
-** For AIX level 73-TL1-SP2-2320, install the `IJ46711s2a.230509.epkg.Z` package.
+* AIX level 73-TL2-SP3-2446 
+* AIX level 73-TL2-SP2-2420 
+* AIX level 72-TL5-SP8-2420 
+--
+.Optionally, set 120 second ANATT
+--
+For enhanced performance for the, IBM provides an ifix that sets the ANATT value to 120 seconds and enhances performance during ONTAP storage failover events. You can install this ifix for the following AIX releases: 
+
+* For AIX level 73-TL3-SP0-2446, install the IJ53487s0a.250130.epkg.Z package. 
+* For AIX level 72-TL5-SP9-2446, install the IJ53445s9a.250130.epkg.Z package. 
+--
+====
 +
 For more information on managing ifixes, see link:http://www-01.ibm.com/support/docview.wss?uid=isg3T1012104[Managing Interim Fixes on AIX^].
 +
-[NOTE] 
-You need to install the ifixes on an AIX version with no previously installed ifixes related to `devices.pciex.pciexclass.010802.rte` on the system. Previously installed ifixes will conflict with the new installation.
+The following tables show HBAs assigned for AIX and VIOS/PowerVM hosts. 
 +
-The following table shows HBAs assigned to the AIX LPAR (AIX Logical Partition) or the physical stack:
-+
+[role="tabbed-block"]
+====
+.AIX
+HBAs assigned to the AIX LPAR (AIX Logical Partition) or the physical stack and the IBM case ID which references the ifix:
+--
 [cols="10,10,10,10,10",options="header"]
 |===
 
@@ -71,15 +94,18 @@ The following table shows HBAs assigned to the AIX LPAR (AIX Logical Partition) 
 .2+|AIX 7.3 TL1 SP2 |Power9	|FW 950 or later	|Physical stack	|The ifix available through TS012877410.
 |Power10	|FW 1010 or later	|Physical and virtual stack	 |The ifix available through TS012877410.
 |===
-+
-The following table shows HBAs assigned to the VIOS with NPIV-enabled support in a virtualized mode:
-+
+--
+.VIOS/PowerVM
+--
+HBAs assigned to the VIOS with NPIV-enabled support in a virtualized mode:
+
 [cols="10,10,10,10,10",options="header"]
 |===
 |Host OS	|Power Arch	|Power FW version	|Mode	|Comments
 |VIOS/PowerVM 3.1.4.21	|Power10	|FW 1010 or later	|Virtual stack	|Support starts from AIX 7.3 TL1 SP2 for VIOC
 |===
-
+--
+====
 
 == Step 1: Confirm the multipath configuration for your host
 
@@ -305,6 +331,6 @@ The NVMe/FC host configuration for AIX with ONTAP storage has the following know
 |===
 
 
-== Step 5: Troublehsoot
+== What's next?
 
-Before troubleshooting any NVMe/FC failures, verify that you are running a configuration that is compliant with the Interoperability Matrix Tool (IMT) specifications. If you are still facing issues, contact link:https://mysupport.netapp.com[NetApp support^].
+Before troubleshooting any NVMe/FC failures, verify that you are running a configuration that is compliant with the Interoperability Matrix Tool (IMT) specifications. If you continue to have issues, contact link:https://mysupport.netapp.com[NetApp support^].
