--- a/hu_solaris_62.adoc
+++ b/hu_solaris_62.adoc
@@ -98,7 +98,7 @@ drwxr-xr-x   3 root     sys            4 Jul 22  2019 ..
 +
 `sanlun version`
 
-== SAN Toolkit
+== Enable SAN toolkit
 
 Solaris Host Utilities is a NetApp host software that provides a command line toolkit on your Oracle Solaris host. The toolkit is installed when you install the NetApp Host Utilities package. This kit provides the `sanlun` utility which helps you manage LUNs and host bus adapters (HBAs). The `sanlun` command returns information about the LUNs mapped to your host, multipathing, and information necessary to create initiator groups.
 
