--- a/nvme_aix.adoc
+++ b/nvme_aix.adoc
@@ -15,7 +15,7 @@ summary: How to Configure NVMe/FC Host for AIX with ONTAP
 [.lead]
 The IBM AIX and Virtual I/O Server (VIOS)VIOS/PowerVM hosts supports the NVMe/FC and NVMe/TCP protocols with Asymmetric Namespace Access (ANA). ANA is equivalent to asymmetric logical unit access (ALUA) multipathing in iSCSI and FCP environments and is implemented using the in-kernel NVMe multipath feature.
 
-For additional details on supported configurations, see the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool^].
+For additional details on supported configurations, see the link:https://mysupport.netapp.com/matrix/[Interoperability Matrix Tool (IMT)^].
 
 .About this task
 You can use the following support and features with the NVMe-oF host configuration for AIX hosts. You should also review the known limitations before starting the configuration process.
@@ -41,7 +41,7 @@ You can use the following support and features with the NVMe-oF host configurati
 
 * If you have a MetroCluster configuration, NetApp recommends changing the AIX NVMe/FC default APD (All Path Down) time for supporting MetroCluster unplanned switchover events to avoid the AIX operating system enforcing a shorter I/O timeout. For additional information and the recommended changes to default settings, refer to NetApp Bugs Online - link:https://mysupport.netapp.com/site/bugs-online/product/HOSTUTILITIES/1553249[1553249^].
 
-* Depending on your AIX version, the Asymmetric Namespace Access Transition Timeout (ANATT) value for the AIX host OS is 30 seconds or 60 seconds by default. If the ANATT default value for your host is 30 seconds, you need to install an ifix from the IBM website that sets the ANATT to 60 seconds to ensure that all ONTAP workflows are non-disruptive. 
+* Depending on your AIX version, the Asymmetric Namespace Access Transition Timeout (ANATT) for the AIX host OS is 30 seconds or 60 seconds by default. If the ANATT default for your host is 30 seconds, you need to install an IBM Interim Fix (ifix) from the IBM website that sets the ANATT to 60 seconds to ensure that all ONTAP workflows are non-disruptive. 
 +
 [NOTE]
 ====
@@ -52,27 +52,27 @@ You need to install the ifixes on an AIX version with no previously installed if
 +
 [role="tabbed-block"]
 ====
-.Set 60 second ANATT
+.Set ANATT to 60 seconds
 --
-IBM provides an ifix that sets the ANATT value to 60 seconds. You need to install this ifix for the following AIX releases:
+The default ANATT for the AIX level 72-TL5-SP6-2320 and AIX level 73-TL1-SP2-2320 releases is 30 seconds. To set the ANATT value to 60 seconds, install the following IBM ifix:
 
-* For AIX level 72-TL5-SP6-2320, install the IJ46710s6a.230509.epkg.Z package.
-* For AIX level 73-TL1-SP2-2320, install the IJ46711s2a.230509.epkg.Z package.
+* For AIX level 72-TL5-SP6-2320, install the `IJ46710s6a.230509.epkg.Z` package.
+* For AIX level 73-TL1-SP2-2320, install the `IJ46711s2a.230509.epkg.Z` package.
 --
-.Default 60 second ANATT 
+.Default ANATT is 60 seconds 
 --
-The default ANATT value is 60 seconds for the following AIX releases:
+The default ANATT is 60 seconds for the following AIX releases:
 
 * AIX level 73-TL2-SP3-2446 
 * AIX level 73-TL2-SP2-2420 
 * AIX level 72-TL5-SP8-2420 
 --
-.Optionally, set 120 second ANATT
+.Optionally, set ANATT to 120 seconds
 --
-For enhanced performance for the, IBM provides an ifix that sets the ANATT value to 120 seconds and enhances performance during ONTAP storage failover events. You can install this ifix for the following AIX releases: 
+IBM provides an ifix that sets the ANATT to 120 seconds. When you set the ANATT to 120 seconds, it enhances performance during ONTAP storage failover events. You can install this ifix for the following AIX releases:
 
-* For AIX level 73-TL3-SP0-2446, install the IJ53487s0a.250130.epkg.Z package. 
-* For AIX level 72-TL5-SP9-2446, install the IJ53445s9a.250130.epkg.Z package. 
+* For AIX level 73-TL3-SP0-2446, install the `IJ53487s0a.250130.epkg.Z` package. 
+* For AIX level 72-TL5-SP9-2446, install the `IJ53445s9a.250130.epkg.Z` package. 
 --
 ====
 +
@@ -83,16 +83,24 @@ The following tables show HBAs assigned for AIX and VIOS/PowerVM hosts.
 [role="tabbed-block"]
 ====
 .AIX
-HBAs assigned to the AIX LPAR (AIX Logical Partition) or the physical stack and the IBM case ID which references the ifix:
 --
+HBAs assigned to the AIX LPAR (AIX Logical Partition) or the physical stack and the IBM case ID which references the ifix:
+
 [cols="10,10,10,10,10",options="header"]
 |===
 
-|Host OS |Power Arch |Power FW version |Mode |Comments
-.2+|AIX 7.2 TL5 SP6 |Power9  |FW 950 or later	|Physical stack	|The ifix available through TS012877410.
-|Power10 |FW 1010 or later	|Physical stack	|SAN booting is supported. The ifix available through TS012877410.
-.2+|AIX 7.3 TL1 SP2 |Power9	|FW 950 or later	|Physical stack	|The ifix available through TS012877410.
-|Power10	|FW 1010 or later	|Physical and virtual stack	 |The ifix available through TS012877410.
+|Host OS |Power Arch |Power FW version |Mode |The ifix is available...
+.2+|AIX 7.2 TL5 SP6 |Power9  |FW 950 or later	|Physical stack	|Through TS012877410
+|Power10 |FW 1010 or later	|Physical stack	|Through TS012877410.
+SAN booting is supported. 
+.2+|AIX 7.3 TL1 SP2 |Power9	|FW 950 or later	|Physical stack	|Through TS012877410
+|Power10	|FW 1010 or later	|Physical and virtual stack	 |Through TS012877410
+.2+|AIX 7.2 TL5 SP8, AIX 7.3 TL2 SP2, AIX 7.3 TL2 SP3 |Power9 |FW 950 or later |Physical stack |By default with the host OS version 
+|Power10 |FW 1010 or later |Physical and virtual stack |By default with the host OS version
+.2+|AIX 7.2 TL5 SP9 |Power9 |FW 950 or later |Physical stack |Through TS018079082 
+|Power10 |FW 1010 or later |Physical and virtual stack |Through TS018079082. 
+.2+|AIX 7.3 TL3 SP0 |Power9 |FW 950 or later |Physical stack |Through TS018079082  
+|Power10 |FW 1010 or later |Physical and virtual stack |Through TS018079082  
 |===
 --
 .VIOS/PowerVM
@@ -115,8 +123,9 @@ When you install the AIX OS, IBM MPIO used for NVMe multipathing is provided by 
 
 . Verify that NVMe multipathing is enabled:
 +
+[source,cli]
 ----
-#[root@aix_server /]: lsmpio -l hdisk1
+[root@aix_server /]: lsmpio -l hdisk1
 ----
 +
 .Show example
@@ -143,6 +152,7 @@ The NVMe/FC protocol support is enabled in the physical FC by default but the NV
 
 . Retrieve a list of virtual adapters:
 +
+[source,cli]
 ----
 $ lsmap -all -npiv
 ----
@@ -164,6 +174,7 @@ VFC client name:fcs0            VFC client DRC:U9105.22A.785DB61-V4-C2
 
 . Enable support for the NVMe/FC protocol on an adapter by running the `ioscli vfcctrl` command on the VIOS:
 +
+[source,cli]
 ----
 $  vfcctrl -enable -protocol nvme -vadapter vfchost0
 ----
@@ -176,8 +187,9 @@ The "nvme" protocol for "vfchost0" is enabled.
 
 . Verify that the support has been enabled on the adapter:
 +
+[source,cli]
 ----
-# lsattr -El vfchost0
+lsattr -El vfchost0
 ----
 +
 .Show example
@@ -199,12 +211,14 @@ num_per_range 0     Number of NPIV SCSI queues per range     True
 .. Change the `dflt_enabl_nvme` attribute value of `viosnpiv0` pseudo device to `yes`.
 .. Set the `enable_nvme` attribute value to `yes` for all the VFC host devices.
 +
+[source,cli]
 ----
-# chdev -l viosnpiv0 -a dflt_enabl_nvme=yes
+chdev -l viosnpiv0 -a dflt_enabl_nvme=yes
 ----
 +
+[source,cli]
 ----
-# lsattr -El viosnpiv0
+lsattr -El viosnpiv0
 ----
 +
 .Show example
@@ -224,8 +238,9 @@ secure_va_info  no  NPIV Secure Virtual Adapter Information              True
 
 . Verify that `FC-NVMe Protocol Device` has been created on the server:
 +
+[source,cli]
 ----
-# [root@aix_server /]: lsdev |grep fcnvme
+[root@aix_server /]: lsdev |grep fcnvme
 ----
 +
 .Exmaple output
@@ -237,8 +252,9 @@ fcnvme1       Available 00-01-02    FC-NVMe Protocol Device
 
 . Record the host NQN from the server:
 +
+[source,cli]
 ----
-# [root@aix_server /]: lsattr -El fcnvme0
+[root@aix_server /]: lsattr -El fcnvme0
 ----
 +
 .Show example
@@ -251,6 +267,7 @@ host_nqn   nqn.2014-08.org.nvmexpress:uuid:64e039bd-27d2-421c-858d-8a378dec31e8 
 ----
 ====
 +
+[source,cli]
 ----
 [root@aix_server /]: lsattr -El fcnvme1
 ----
@@ -267,8 +284,9 @@ host_nqn   nqn.2014-08.org.nvmexpress:uuid:64e039bd-27d2-421c-858d-8a378dec31e8 
 
 . Check the host NQN and verify that it matches the host NQN string for the corresponding subsystem on the ONTAP array:
 +
+[source,cli]
 ----
-::> vserver nvme subsystem host show -vserver vs_s922-55-lpar2
+vserver nvme subsystem host show -vserver vs_s922-55-lpar2
 ----
 +
 .Example output
@@ -289,8 +307,9 @@ Verify that the ONTAP namespaces are correct for the NVMe/FC configuration.
 .Steps
 . Verify that the ONTAP namespaces correctly reflect on the host:
 +
+[source,cli]
 ----
-# [root@aix_server /]: lsdev -Cc disk |grep NVMe
+[root@aix_server /]: lsdev -Cc disk |grep NVMe
 ----
 +
 .Example output
@@ -300,8 +319,9 @@ hdisk1  Available 00-00-02 NVMe 4K Disk
 
 . Optionally, check the multipathing status:
 +
+[source,cli]
 ----
-#[root@aix_server /]: lsmpio -l hdisk1
+[root@aix_server /]: lsmpio -l hdisk1
 ----
 +
 .Show example
@@ -331,6 +351,6 @@ The NVMe/FC host configuration for AIX with ONTAP storage has the following know
 |===
 
 
-== What's next?
+== Step 5: Troubleshoot
 
-Before troubleshooting any NVMe/FC failures, verify that you are running a configuration that is compliant with the Interoperability Matrix Tool (IMT) specifications. If you continue to have issues, contact link:https://mysupport.netapp.com[NetApp support^].
+Before troubleshooting any NVMe/FC failures, verify that you are running a configuration that is compliant with the link:https://mysupport.netapp.com/matrix/[IMT^] specifications. If you continue to have issues, contact link:https://mysupport.netapp.com[NetApp support^].
