--- a/hu-aix-san-toolkit.adoc
+++ b/hu-aix-san-toolkit.adoc
@@ -34,4 +34,5 @@ NOTE: This toolkit is common across all Host Utilities configurations and protoc
 
 == What's next?
 
-link:hu-aix-80-command-reference.html[Learn about the AIX Host Utilities 8.0 tool].
+* link:hu-aix-80-command-reference.html[Learn about the AIX Host Utilities 8.0 tool].
+* link:hu-aix-61-command-reference.html[Learn about the AIX Host Utilities 6.1 tool].
