--- a/hu-solaris-114.adoc
+++ b/hu-solaris-114.adoc
@@ -76,4 +76,6 @@ The Solaris 11.4 release for FCP and iSCSI with ONTAP storage has the following 
 | link:https://mysupport.netapp.com/site/bugs-online/product/HOSTUTILITIES/1345622[1345622^] | Abnormal path reporting on Solaris hosts with ASA/PPorts using OS native commands | Intermittent path reporting issues are noticed on Solaris 11.4 with All SAN Array (ASA). | Not Applicable
 |===
 
-include::_include/hu/solaris-whats-next.adoc[]
+== What's next?
+
+link:hu-solaris-80-cmd.html[Learn about using the Solaris Host Utilities 8.0 tool].
