--- a/hu_aix_72.adoc
+++ b/hu_aix_72.adoc
@@ -21,7 +21,7 @@ You must install the AIX Host Utilities Kit while using AIX Microsoft Multipath 
 
 You can download the compressed file containing the Host Utilities software packages from the link:https://mysupport.netapp.com/site/products/all/details/hostutilities/downloads-tab/download/61343/6.1/downloads[NetApp Support Site^]. After you have the file, you must decompress it to get the two software packages you need to install the Host Utilities.
 
-The AIX Host Utilities 6.1 release addresses the memory leak issue that was reported in the previous releases. Refer to the link:hu_aix_rn.html[release notes] for additional information.
+The AIX Host Utilities 6.1 release addresses the memory leak issue that was reported in the previous releases. Refer to the link:hu-aix-rn.html[release notes] for additional information.
 
 .Steps
 
