--- a/hu_wuhu_troubleshoot.adoc
+++ b/hu_wuhu_troubleshoot.adoc
@@ -24,7 +24,7 @@ The following is a list of the different areas you can investigate for potential
 * If iSCSI LUNs are not available after a reboot, verify that the target is listed as persistent on the *Persistent Targets* tab of the Microsoft iSCSI initiator GUI.
 * If applications using the LUNs display errors on startup, verify that the applications are configured to depend on the iSCSI service.
 * For FC paths to storage controllers running ONTAP, verify that the FC switches are zoned using the WWPNs of the target LIFs, not the WWPNs of the physical ports on the node.
-* Review the link:hu_wuhu_71_rn.html[Release Notes] for Windows Host Utilities to check for known issues. The Release Notes include a list of known issues and limitations.
+* Review the link:hu-wuhu-rn.html[Release Notes] for Windows Host Utilities to check for known issues. The Release Notes include a list of known issues and limitations.
 * Review the troubleshooting information in the https://docs.netapp.com/us-en/ontap/san-admin/index.html[ONTAP SAN administration^] documentation.
 * Search https://mysupport.netapp.com/site/bugs-online/product[NetApp Bugs Online^] for recently discovered issues.
 ** In the Bug Type field under Advanced Search, select *iSCSI - Windows* and then select *Go*. You should repeat the search for Bug Type *FCP -Windows*.
