--- a/redirects/hu_aix_61_rn.adoc
+++ b/redirects/hu_aix_61_rn.adoc
@@ -1,5 +1,4 @@
 ---
-sidebar: sidebar
 permalink: hu_aix_61_rn.html
-redirect: ontap-sanhost/hu_aix_rn.html
+redirect: ontap-sanhost/hu-aix-rn.html
 ---
