minor content improvements

--- a/_include/hu/solaris-recommended-settings-mcc-virtualization-snapmirror.adoc
+++ b/_include/hu/solaris-recommended-settings-mcc-virtualization-snapmirror.adoc
@@ -1,4 +1,4 @@
-. Change the default settings for MetroCluster, Oracle Solaris virtualization, or SnapMirror active sync, if these options are included in you storage configuration.
+. If your storage configuration includes MetroCluster, Oracle Solaris virtualization, or SnapMirror active sync, change the default settings:
 +
 [role="tabbed-block"]
 =====
