--- a/_include/hu/aix-recommended-settings-mcc-snapmirror-active-sync.adoc
+++ b/_include/hu/aix-recommended-settings-mcc-snapmirror-active-sync.adoc
@@ -1,4 +1,4 @@
-. Change the default settings for MetroCluster or SnapMirror active sync, if these options are included in your storage configuration.
+. If your storage configuration includes MetroCluster or SnapMirror active sync, change the default settings:
 +
 [role="tabbed-block"]
 ====
