--- a/hu-aix-73.adoc
+++ b/hu-aix-73.adoc
@@ -192,4 +192,4 @@ There are no known issues.
 
 == What's next?
 
-link:hu-aix-80-command-reference.html[Learn about the AIX Host Utilties 8.0 tool].
+link:hu-aix-80-command-reference.html[Learn about using the AIX Host Utilities 8.0 tool].
